Fix playground on Firefox.

--- a/web-playground/stage/style.css
+++ b/web-playground/stage/style.css
@@ -19,4 +19,5 @@
 
 #js_source {
     font-family: monospace;
+    white-space: pre;
 }
